# sumpig

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
.github/workflows/: bench.yml  ci.yml  release.yml
.veer/: config.toml
benches/: hash_bench.rs  merkle_bench.rs  walk_bench.rs
docs/: merkle-tree-primer.md  performance.md  release-and-homebrew-setup.md
docs/spec/: contract.md  spec-ci.md  spec-phase-1.md  spec-phase-2.md  spec-phase-3.md  spec-progress.md  sumpig-spec.md  treesum-spec.md
scripts/: setup-homebrew-tap.sh
src/: compare.rs  hash.rs  lib.rs  main.rs  manifest.rs  merkle.rs  walk.rs
tests/: integration.rs
