[package]
name = "sumpig"
version = "0.2.7"
edition = "2024"
license = "MIT"
description = "Merkle tree directory fingerprinting and comparison"
repository = "https://github.com/tednaleid/sumpig"

[dependencies]
blake3 = "1"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
indicatif = "0.17"
jwalk = "0.8"
libc = "0.2"
rayon = "1"

[dev-dependencies]
assert_cmd = "2"
criterion = { version = "0.5", features = ["html_reports"] }
predicates = "3"
tempfile = "3"

[[bench]]
name = "hash_bench"
harness = false

[[bench]]
name = "walk_bench"
harness = false

[[bench]]
name = "merkle_bench"
harness = false
